logs/hackwrench.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hackwrench'...
Compiling './lib/python3.5/site-packages/hackwrench/browser.py'...
***   File "./lib/python3.5/site-packages/hackwrench/browser.py", line 26
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hackwrench/ext.py'...
***   File "./lib/python3.5/site-packages/hackwrench/ext.py", line 8
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hackwrench/extensions'...
Compiling './lib/python3.5/site-packages/hackwrench/extensions/greasemonkey.py'...
***   File "./lib/python3.5/site-packages/hackwrench/extensions/greasemonkey.py", line 27
    print 'userscript %s match(%s,%s)' % (f, frame.get_uri(), mask)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hackwrench/gui.py'...
***   File "./lib/python3.5/site-packages/hackwrench/gui.py", line 24
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hackwrench/inspector.py'...
***   File "./lib/python3.5/site-packages/hackwrench/inspector.py", line 64
    print "attach"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hackwrench/nprefs'...
Compiling './lib/python3.5/site-packages/hackwrench/plugins.py'...
***   File "./lib/python3.5/site-packages/hackwrench/plugins.py", line 11
    print self.signals
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hackwrench/webkit_evaljs.py'...
*** Sorry: IndentationError: expected an indented block (webkit_evaljs.py, line 14)
Listing './lib/python3.5/site-packages/hackwrench-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
